--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Yin Fung Khong</h1>
             <h2>M.S Computer Engineering</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="YinFungKhong_MS-CompEngr_June7_CV.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
