--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Yin Fung Khong</h1>
-            <h2>M.S Computer Engineering</h2>
+            <h2>M.S./B.S. in Computer Engineering</h2>
             <a href="YinFungKhong_MS-CompEngr_June7_CV.pdf" download class="btn-rounded-white">Download CV</a>
         </div>
         <!-- End #lead-content -->
