--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <h1>Yin Fung Khong</h1>
             <h2>M.S./B.S. in Computer Engineering</h2>
             <a href="YinFungKhong_MS-CompEngr_June7_CV.pdf" download class="btn-rounded-white">Download CV</a>
-		<a href="YinFungKhong_MS-CompEngr_June7_CV.pdf" download class="btn-rounded-white">Download Resume</a>
+		&nbsp;
+            <a href="YinFungKhong_MS-CompEngr_June9_ResumeEngr.pdf" download class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
