--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="September 2018 - May 2019">
+                <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
+                <h4>Graduate Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    ● Graded assignments and lab reports, and tabulate grades accordingly.
+			● Assisted in lab, answering questions related to homework assignments and laboratory experiments.
+
                 </p>
             </div>
 
