--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
                 <p>
-                    ● Graded assignments and lab reports, and tabulate grades accordingly.
+                    ● Graded assignments and lab reports, and tabulate grades accordingly.<br>
 			● Assisted in lab, answering questions related to homework assignments and laboratory experiments.
 
                 </p>
