--- a/index.html
+++ b/index.html
@@ -97,22 +97,28 @@
 
                 </p>
             </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+	    
+	    <div data-date="January 2019 - May 2019">
+                <h3>College of Engineering & Computer Science (CECS) Mentorship Program </h3>
+                <h4>Student Coordinator</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    ● Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.<br>
+			● Structured and piloted the program to improve students learning outcomes within the program.<br>
+			● Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.
+		</p>
+            </div>
+		
+            <div data-date="January 2017 - May 2019">
+                <h3>CSUN Mentorship Program</h3>
+                <h4>Peer Mentor</h4>
+                <p>
+                    ● Impacted assigned mentees positively by serving as a social and academic role model.<br>
+			● Helped set goals and offer support through referral of resources available on campus.<br>
+			● Fostered a supportive environment with constructive feedback on performance.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
+            
         </div>
     </div>
     <!-- End #experience -->
