--- a/index.html
+++ b/index.html
@@ -117,7 +117,16 @@
 			● Fostered a supportive environment with constructive feedback on performance.
                 </p>
             </div>
-
+		
+	    <div data-date="June 2018 - August 2019">
+                <h3>Intel Corporation - Intel  </h3>
+                <h4>Student Coordinator</h4>
+                <p>
+                    ● Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.<br>
+			● Structured and piloted the program to improve students learning outcomes within the program.<br>
+			● Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.
+		</p>
+            </div>
             
         </div>
     </div>
