--- a/index.html
+++ b/index.html
@@ -119,15 +119,22 @@
             </div>
 		
 	    <div data-date="June 2018 - August 2019">
-                <h3>Intel Corporation - Intel  </h3>
-                <h4>Student Coordinator</h4>
+                <h3>Intel Corporation - Intel (iCDG) </h3>
+                <h4>Graduate Intern</h4>
                 <p>
-                    ● Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.<br>
-			● Structured and piloted the program to improve students learning outcomes within the program.<br>
-			● Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.
+                   ● Designed and developed C# application that integrates JMP for product’s test data analysis.<br>
+			● Implemented Machine Learning for pattern detection in test data.
 		</p>
             </div>
-            
+  		
+	    <div data-date="November 2014 - July 2015">
+                <h3>North Seattle College, International Programs </h3>
+                <h4>Graduate Intern</h4>
+                <p>
+                   ● Liaised with the marketing department to visualize and design marketing materials.<br>
+			● Created and photographed college's community events based on the marketing needs.
+		</p>
+            </div>          
         </div>
     </div>
     <!-- End #experience -->
