--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
                 <p>
-                    ● Graded assignments and lab reports, and tabulate grades accordingly.<br>
-			● Assisted in lab, answering questions related to homework assignments and laboratory experiments.
+                    ●  Graded assignments and lab reports, and tabulate grades accordingly.<br>
+			●  Assisted in lab, answering questions related to homework assignments and laboratory experiments.
 
                 </p>
             </div>
@@ -102,9 +102,9 @@
                 <h3>College of Engineering & Computer Science (CECS) Mentorship Program </h3>
                 <h4>Student Coordinator</h4>
                 <p>
-                    ● Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.<br>
-			● Structured and piloted the program to improve students learning outcomes within the program.<br>
-			● Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.
+                    ●  Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.<br>
+			●  Structured and piloted the program to improve students learning outcomes within the program.<br>
+			●  Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.
 		</p>
             </div>
 		
@@ -112,28 +112,29 @@
                 <h3>CSUN Mentorship Program</h3>
                 <h4>Peer Mentor</h4>
                 <p>
-                    ● Impacted assigned mentees positively by serving as a social and academic role model.<br>
-			● Helped set goals and offer support through referral of resources available on campus.<br>
-			● Fostered a supportive environment with constructive feedback on performance.
+                    ●  Impacted assigned mentees positively by serving as a social and academic role model.<br>
+			●  Helped set goals and offer support through referral of resources available on campus.<br>
+			●  Fostered a supportive environment with constructive feedback on performance.
                 </p>
             </div>
 		
 	    <div data-date="June 2018 - August 2019">
                 <h3>Intel Corporation - Intel (iCDG) </h3>
                 <h4>Graduate Intern</h4>
-                <p>
-                   ● Designed and developed C# application that integrates JMP for product’s test data analysis.<br>
-			● Implemented Machine Learning for pattern detection in test data.
-		</p>
+                <ul>
+                	<li> Designed and developed C# application that integrates JMP for product’s test data analysis.</li>
+			<li> Implemented Machine Learning for pattern detection in test data.</li>
+		</ul>
             </div>
   		
 	    <div data-date="November 2014 - July 2015">
                 <h3>North Seattle College, International Programs </h3>
                 <h4>Graduate Intern</h4>
-                <p>
-                   ● Liaised with the marketing department to visualize and design marketing materials.<br>
-			● Created and photographed college's community events based on the marketing needs.
-		</p>
+                <ul>
+                	<li> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+			<li> Liaised with the marketing department to visualize and design marketing materials.</li>
+			<li> Created and photographed college's community events based on the marketing needs.</li>
+		</ul>
             </div>          
         </div>
     </div>
@@ -142,9 +143,9 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>California State University, Northridge</h3>
+            <span class="education-date">January 2018 - May 2019</span>
+            <h4>Master of Science in Computer Engineering</h4>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
@@ -156,9 +157,7 @@
             <span class="education-date">Sept 2016 - Sept 2017</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </li>
