--- a/index.html
+++ b/index.html
@@ -91,31 +91,30 @@
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
-                <p>
-                    ●  Graded assignments and lab reports, and tabulate grades accordingly.<br>
-			●  Assisted in lab, answering questions related to homework assignments and laboratory experiments.
-
-                </p>
+                <ul>
+			<li> Graded assignments and lab reports, and tabulate grades accordingly.</li>
+			<li> Assisted in lab, answering questions related to homework assignments and laboratory experiments.</li>
+                </ul>
             </div>
 	    
 	    <div data-date="January 2019 - May 2019">
                 <h3>College of Engineering & Computer Science (CECS) Mentorship Program </h3>
                 <h4>Student Coordinator</h4>
-                <p>
-                    ●  Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.<br>
-			●  Structured and piloted the program to improve students learning outcomes within the program.<br>
-			●  Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.
-		</p>
+                <ul>
+                	<li> Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.</li>
+			<li> Structured and piloted the program to improve students learning outcomes within the program.</li>
+			<li> Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.</li>
+		</ul>
             </div>
 		
             <div data-date="January 2017 - May 2019">
                 <h3>CSUN Mentorship Program</h3>
                 <h4>Peer Mentor</h4>
-                <p>
-                    ●  Impacted assigned mentees positively by serving as a social and academic role model.<br>
-			●  Helped set goals and offer support through referral of resources available on campus.<br>
-			●  Fostered a supportive environment with constructive feedback on performance.
-                </p>
+                <ul>
+                	<li> Impacted assigned mentees positively by serving as a social and academic role model.</li>
+			<li> Helped set goals and offer support through referral of resources available on campus.</li>
+			<li> Fostered a supportive environment with constructive feedback on performance.</li>
+                </ul>
             </div>
 		
 	    <div data-date="June 2018 - August 2019">
