--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">January 2018 - May 2019</span>
             <h4>Master of Science in Computer Engineering</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+	    <span class="GPA">3.95/4.0</span>
+            <ul>
+                <li> Distinction Award.</li>
+		<li> Outstanding Graduate Award.</li>
+            </ul>
         </div>
         <!-- End .education-block -->
 
