--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
-                <p>
-			x Graded assignments and lab reports, and tabulate grades accordingly.<br>
-			x Assisted in lab, answering questions related to homework assignments and laboratory experiments.
-                </p>
+                <ul>
+			<li> Graded assignments and lab reports, and tabulate grades accordingly.</li>
+			<li> Assisted in lab, answering questions related to homework assignments and laboratory experiments.</li>
+                </ul>
             </div>
 	    
 	    <div data-date="January 2019 - May 2019">
@@ -146,10 +146,10 @@
             <span class="education-date">January 2018 - May 2019</span>
             <h4>Master of Science in Computer Engineering</h4>
 	    <span class="education-date">3.95/4.00-</span>
-            <ul>
-                <li> Distinction Award.</li>
-		<li> Outstanding Graduate Award.</li>
-            </ul>
+            <p>
+                x Distinction Award.<br.
+		x Outstanding Graduate Award.
+            <p>
         </div>
         <!-- End .education-block -->
 
