--- a/index.html
+++ b/index.html
@@ -148,22 +148,16 @@
             <p>
                 x Distinction Award.<br>
 		x Outstanding Graduate Award.
-            <p>
+            </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>California State University, Northridge</h3>
+            <span class="education-date">August 2015 - December 2017</span>
+            <h4>Bachelor of Science in Computer Engineering</h4>
             <ul>
-                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+                <li> Summa Cum Laude.</li>
             </ul>
         </div>
         <!-- End .education-block -->
