--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">January 2018 - May 2019</span>
             <h4>Master of Science in Computer Engineering</h4>
+		<span class="education-date">3.95/4.00</span>
             <p>
                 x Distinction Award.<br>
 		x Outstanding Graduate Award.
