--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">January 2018 - May 2019</span>
             <h4>Master of Science in Computer Engineering</h4>
-		<span class="education-date">3.95/4.00</span>
+		<span class="education-date">3.95/4.00-</span>
             <ul>
                 <li> Distinction Award.</li>
 	    	<li> Outstanding Graduate Award.</li>
