--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">August 2015 - December 2017</span>
             <h4>Bachelor of Science in Computer Engineering</h4>
-            <ul>
-                <li> Summa Cum Laude.</li>
-            </ul>
+		<span class="education-date">3.95/4.00-</span>
+            <p>
+                x Summa Cum Laude.
+            </p>
         </div>
         <!-- End .education-block -->
     </div>
