--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
             <span class="education-date">August 2015 - December 2017</span>
             <h4>Bachelor of Science in Computer Engineering</h4>
 		<span class="education-date">3.95/4.00</span>
-            <p>
-                x Summa Cum Laude.
-            </p>
+            <ul>
+		<li> Summa Cum Laude.</li>
+            </ul>
         </div>
         <!-- End .education-block -->
     </div>
