--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">August 2015 - December 2017</span>
             <h4>Bachelor of Science in Computer Engineering</h4>
-		<span class="education-date">3.95/4.00</span>
+		<span> <i class="education-date">3.95/4.00</i></span>
             <ul>
 		<li> Summa Cum Laude.</li>
             </ul>
