--- a/index.html
+++ b/index.html
@@ -157,12 +157,26 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">August 2015 - December 2017</span>
             <h4>Bachelor of Science in Computer Engineering</h4>
-		<span> <i class="education-date">3.95/4.00</i></span>
+		<span> <i class="education-date">3.94/4.00</i></span>
             <ul>
 		<li> Summa Cum Laude.</li>
+		    <li> Dean's List.</li>
             </ul>
         </div>
         <!-- End .education-block -->
+	    
+        <div class="education-block">
+            <h3>North Seattle College</h3>
+            <span class="education-date">January 2014 - June 2016</span>
+            <h4>Associate's Degree - Computer Engineering</h4>
+		<span> <i class="education-date">3.97/4.00</i></span>
+            <ul>
+		<li> Achievement & Merit Scholarships.</li>
+	        <li> Dean's List.</li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+	    
     </div>
     <!-- End #education -->
 
