--- a/index.html
+++ b/index.html
@@ -81,39 +81,41 @@
                         ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
                     </p>
                 </div>
-		    
-		<!-- YF ADDED --> 
-		<div class="resume-skill-item">
-			<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
-			<ul class="list-unstyled mb-4">
-				 <li class="mb-2">
-				    <div class="resume-skill-name">HTML/CSS</div>
-					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-				</li>
-				<li class="mb-2">
-				    <div class="resume-skill-name">JavaScript</div>
-					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-				</li>
-				<li class="mb-2">
-				    <div class="resume-skill-name">JQuery</div>
-					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-				</li>
-				<li class="mb-2">
-				    <div class="resume-skill-name">Node.js</div>
-					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-				</li>
-			</u1>
-		</div><!--//resume-skill-item-->
             </div>
-        </div>
+    </div>
+		<!-- YF ADDED --> 
+	<section>	 
+	<div class="resume-skill-item">
+		<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
+		<ul class="list-unstyled mb-4">
+			 <li class="mb-2">
+			    <div class="resume-skill-name">HTML/CSS</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">JavaScript</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">JQuery</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">Node.js</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+		</u1>
+	</div><!--//resume-skill-item-->
+	</section>
+        
     </div>
     <!-- End #about -->
 		
