--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     	</div>    
 	</div>
 		<!-- YF ADDED --> 
-	<section>	 
+	<aside>	 
 	<div class="resume-skill-item">
 		<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
 		<ul class="list-unstyled mb-4">
@@ -115,7 +115,7 @@
 			</li>
 		</u1>
 	</div><!--//resume-skill-item-->
-	</section>
+	</aside>
     
 	<!-- YF ADDED 2--> 
 	<aside>	 
