--- a/index.html
+++ b/index.html
@@ -155,40 +155,7 @@
 	    
     </div>
     <!-- End #education -->
-
-<!-- YF ADDED 2--> 
-	<aside>	 
-	<div class="resume-skill-item">
-		<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
-		<ul class="list-unstyled mb-4">
-			 <li class="mb-2">
-			    <div class="resume-skill-name">HTML/CSS</div>
-				<div class="progress resume-progress">
-					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-			</li>
-			<li class="mb-2">
-			    <div class="resume-skill-name">JavaScript</div>
-				<div class="progress resume-progress">
-					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-			</li>
-			<li class="mb-2">
-			    <div class="resume-skill-name">JQuery</div>
-				<div class="progress resume-progress">
-					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-			</li>
-			<li class="mb-2">
-			    <div class="resume-skill-name">Node.js</div>
-				<div class="progress resume-progress">
-					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-			</li>
-		</u1>
-	</div><!--//resume-skill-item-->
-	</aside>
-    <!-- End #about -->
+	
 		
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
@@ -243,6 +210,40 @@
         </div>
     </div>
     <!-- End #experience -->
+	
+<!-- Skills Bar--> 
+	<aside>	 
+	<div class="resume-skill-item">
+		<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
+		<ul class="list-unstyled mb-4">
+			 <li class="mb-2">
+			    <div class="resume-skill-name">HTML/CSS</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">JavaScript</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">JQuery</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">Node.js</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+		</u1>
+	</div><!--//resume-skill-item-->
+	</aside>
+    <!-- End #about -->
 	
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
