--- a/index.html
+++ b/index.html
@@ -182,30 +182,36 @@
 	<!-- YF ADDED SKILL BARs--> 
 	<section>	<!-- Left Section-->
 	<div class="resume-skill-item">
-		<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
+		<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
 		<ul class="list-unstyled mb-4">
 			 <li class="mb-2">
-			    <div class="resume-skill-name">HTML/CSS</div>
+			    <div class="resume-skill-name">Verilog/System Verilog</div>
 				<div class="progress resume-progress">
 					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 			</li>
 			<li class="mb-2">
-			    <div class="resume-skill-name">JavaScript</div>
+			    <div class="resume-skill-name">MATLAB</div>
 				<div class="progress resume-progress">
 					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 			</li>
 			<li class="mb-2">
-			    <div class="resume-skill-name">JQuery</div>
+			    <div class="resume-skill-name">VHDL</div>
 				<div class="progress resume-progress">
 					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 			</li>
 			<li class="mb-2">
-			    <div class="resume-skill-name">Node.js</div>
+			    <div class="resume-skill-name">C#</div>
 				<div class="progress resume-progress">
 					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">Java</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 			</li>
 		</u1>
@@ -214,30 +220,36 @@
 	
 	<aside>	 <!-- Right Section--> 
 	<div class="resume-skill-item">
-		<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
+		<h4 class="resume-skills-cat font-weight-bold">Multilingual</h4>
 		<ul class="list-unstyled mb-4">
 			 <li class="mb-2">
-			    <div class="resume-skill-name">HTML/CSS</div>
+			    <div class="resume-skill-name">English</div>
 				<div class="progress resume-progress">
-					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">xx</div>
 					</div>
 			</li>
 			<li class="mb-2">
-			    <div class="resume-skill-name">JavaScript</div>
+			    <div class="resume-skill-name">Mandarin</div>
 				<div class="progress resume-progress">
 					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 			</li>
 			<li class="mb-2">
-			    <div class="resume-skill-name">JQuery</div>
+			    <div class="resume-skill-name">Bahasa Malaysia</div>
 				<div class="progress resume-progress">
 					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 			</li>
 			<li class="mb-2">
-			    <div class="resume-skill-name">Node.js</div>
+			    <div class="resume-skill-name">Cantonese</div>
 				<div class="progress resume-progress">
 					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+			</li>
+			<li class="mb-2">
+			    <div class="resume-skill-name">Hokkien</div>
+				<div class="progress resume-progress">
+					    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 			</li>
 		</u1>
