--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </div>
     <!-- End #lead -->
 	
+    <!-- ABOUT SECTION ############################################################################################################### -->
     <div id="about">
         <div class="container">
             <div class="row">
@@ -85,6 +86,7 @@
     	</div>    
 	</div>
 
+    <!-- EDUCATION SECTION ############################################################################################################ -->
     <div id="education">
         <h2 class="heading">Education</h2>	
         <div class="education-block">	<!-- block 1-->
@@ -124,7 +126,7 @@
     </div>
     <!-- End #education -->
 	
-		
+    <!-- EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
@@ -178,8 +180,52 @@
         </div>
     </div>
     <!-- End #experience -->
-	
-	<!-- YF ADDED SKILL BARs--> 
+
+    <!-- PROJECTS SECTION ########################################################################################################### -->	
+    <div id="projects" class="background-alt">
+        <h2 class="heading">Projects</h2>
+        <div class="container">
+            <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Project Name Here</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Project Name Here</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+            </div>
+        </div>
+    </div>
+    <!-- End #projects -->
+
+    <!-- SKILLS SECTION ############################################################################################################# -->	
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+	<!-- YF ADDED SKILL BARs ########--> 
 	<section>	<!-- Left Section-->
 	<div class="resume-skill-item">
 		<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
@@ -256,49 +302,8 @@
 	</div><!--//resume-skill-item-->
 	</aside>
     <!-- End #about -->
-	
-    <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
-        <div class="container">
-            <div class="row">
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-            </div>
-        </div>
-    </div>
-    <!-- End #projects -->
-
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
+	    
+	    
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
@@ -330,8 +335,7 @@
     </div>
     <!-- End #skills -->
 
-
-	
+    <!-- CONTACT SECTION ############################################################################################################# -->	
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
