--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
 	<!-- YF ADDED SKILL BARs ########--> 
+	<div>
 	<section>	<!-- Left Section-->
 	<div class="resume-skill-item">
 		<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
@@ -263,7 +264,7 @@
 		</u1>
 	</div><!--//resume-skill-item-->
 	</section>
-	
+	</div>
 	<aside>	 <!-- Right Section--> 
 	<div class="resume-skill-item">
 		<h4 class="resume-skills-cat font-weight-bold">Multilingual</h4>
