--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
 	</div><!--//resume-skill-item-->
 	</aside>
 	</div>
+	</div>
     <!-- End #about -->
 	    
-	    
+    <div id="skills2">
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
