--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; <?php echo date("Y"); ?> Yin Fung Khong
                     </p>
                 </div>
                 <div class="col-sm-2 top">
