--- a/index.html
+++ b/index.html
@@ -223,10 +223,11 @@
     <!-- End #projects -->
 
     <!-- SKILLS SECTION ############################################################################################################# -->	
-    <div id="skills1">
+    <div id="skills">
         <h2 class="heading">Skills</h2>
-	<!-- YF ADDED SKILL BARs ########--> 
-	<div>
+    </div>
+    <!-- YF ADDED SKILL BARs ########--> 
+    <div id="skills-bar">
 	<section>	<!-- Left Section-->
 	<div class="resume-skill-item">
 		<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
@@ -302,7 +303,7 @@
 	</div><!--//resume-skill-item-->
 	</aside>
 	</div>
-	</div>
+    </div>
     <!-- End #about -->
 	    
     <div id="skills">
