--- a/index.html
+++ b/index.html
@@ -308,32 +308,16 @@
 	    
     <div id="skills">
         <ul>
+	    <li>ARM</li>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
             <li>C</li>
-            <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+	    <li>JMP</li>
+	    <li>Wordpress</li>
+	    <li>Microsoft Office</li>
+	    <li>Adobe Photoshop</li>
+	    <li>Adobe Lightroom</li>
         </ul>
     </div>
     <!-- End #skills -->
