--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
     <!-- SKILLS SECTION ############################################################################################################# -->	
     <div id="skills">
         <h2 class="heading">Skills</h2>
-
+    </div>
+    <div>
 	<section>	<!-- Left Section-->
 	<div class="resume-skill-item"> 
 		<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
@@ -263,6 +264,7 @@
 		</ul>
 	</div><!--//resume-skill-item--> 
 	</section>
+	    
 	<aside>	 <!-- Right Section--> 
 	<div class="resume-skill-item"> 
 		<h4 class="resume-skills-cat font-weight-bold">Multilingual</h4>
@@ -302,7 +304,7 @@
 	</aside>
     </div>
     <!-- End #about -->
-	    
+    <div>	    
         <ul>
 	    <li>ARM</li>
             <li>JavaScript</li>
