--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <!-- SKILLS SECTION ############################################################################################################# -->	
     <div id="skills">
         <h2 class="heading">Skills</h2>
-	    <div>
+	    <div class = "skills-bar">
 		<section>	<!-- Left Section-->
 		<div class="resume-skill-item"> 
 			<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
