--- a/index.html
+++ b/index.html
@@ -223,10 +223,9 @@
     <!-- End #projects -->
 
     <!-- SKILLS SECTION ############################################################################################################# -->	
-    <div id="skills">
+    <div id="skills-0">
         <h2 class="heading">Skills</h2>
-	    <section>
-		<section>	<!-- Left Section-->
+	<section>	<!-- Left Section-->
 		<div class="resume-skill-item"> 
 			<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
 			<ul class="list-unstyled mb-4">
@@ -262,9 +261,9 @@
 				</li>
 			</ul>
 		</div><!--//resume-skill-item--> 
-		</section>
+	</section>
 
-		<aside>	 <!-- Right Section--> 
+	<aside>	 <!-- Right Section--> 
 		<div class="resume-skill-item"> 
 			<h4 class="resume-skills-cat font-weight-bold">Multilingual</h4>
 			<ul class="list-unstyled mb-4">
@@ -300,9 +299,10 @@
 				</li>
 			</ul>
 		</div><!--//resume-skill-item--> 
-		</aside>
-	    </div>
-    <!-- End #about -->	    
+	</aside>
+    	</div>
+    <!-- End #about -->	   
+    <div id="skills">
         <ul>
 	    <li>ARM</li>
             <li>JavaScript</li>
