--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <!-- End #projects -->
 
     <!-- SKILLS SECTION ############################################################################################################# -->	
-    <div id="skills-0">
+    <div id="skills-0" class="background-alt">
         <h2 class="heading">Skills</h2>
 	<section>	<!-- Left Section-->
 		<div class="resume-skill-item"> 
