--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
     <!-- SKILLS SECTION ############################################################################################################# -->	
     <div id="skills-0" class="background-alt">
         <h2 class="heading">Skills</h2>
+	<div class="group">    
 	<section>	<!-- Left Section-->
 		<div class="resume-skill-item"> 
 			<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
@@ -300,6 +301,7 @@
 			</ul>
 		</div><!--//resume-skill-item--> 
 	</aside>
+        </div>
     	</div>
     <!-- End #about -->	   
     <div id="skills">
