--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 			<h4 class="resume-skills-cat font-weight-bold">Programming</h4>
 			<ul class="list-unstyled mb-4">
 				 <li class="mb-2">
-				    <div class="resume-skill-name">Verilog/System Verilog</div>
+				    <div class="resume-skill-name">Verilog/S. Verilog</div>
 					<div class="progress resume-progress">
 						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
