--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <?php echo date("Y"); ?> Yin Fung Khong
+                        Copyright &copy; <?php echo date("Y"); ?>
                     </p>
                 </div>
                 <div class="col-sm-2 top">
