--- a/index.html
+++ b/index.html
@@ -340,9 +340,11 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <?php echo date("Y"); ?>
+                        Copyright &copy;
                     </p>
-                </div>
+			 <?php echo date("Y"); ?>
+			<p>Yin Fung Khong</p>
+                </div>w
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
