--- a/index.html
+++ b/index.html
@@ -339,11 +339,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
-                    <p>
-                        Copyright &copy;
-                    </p>
-			 <?php echo date("Y"); ?>
-			<p>Yin Fung Khong</p>
+                    &copy; <?php echo date("Y"); ?>
                 </div>w
                 <div class="col-sm-2 top">
                     <span id="to-top">
