--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
-                    <p>Copyright &copy <span id="year"><?php echo date("Y"); ?></span></p>
+                    <p>Copyright &copy 2019 Yin Fung Khong
                 </div>w
                 <div class="col-sm-2 top">
                     <span id="to-top">
