--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
-                    <p>Copyright &copy 2019 Yin Fung Khong
-                </div>w
+			<p>Copyright &copy 2019 Yin Fung Khong</p>
+                </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
