--- a/index.html
+++ b/index.html
@@ -175,31 +175,31 @@
 				 <li class="mb-2">
 				    <div class="resume-skill-name">English</div>
 					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">xx</div>
+						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Fluent</div>
 						</div>
 				</li>
 				<li class="mb-2">
 				    <div class="resume-skill-name">Mandarin</div>
 					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Fluent</div>
 						</div>
 				</li>
 				<li class="mb-2">
 				    <div class="resume-skill-name">Bahasa Malaysia</div>
 					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Proficient</div>
 						</div>
 				</li>
 				<li class="mb-2">
 				    <div class="resume-skill-name">Cantonese</div>
 					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Conversational</div>
 						</div>
 				</li>
 				<li class="mb-2">
 				    <div class="resume-skill-name">Hokkien</div>
 					<div class="progress resume-progress">
-						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Conversational</div>
 						</div>
 				</li>
 			</ul>
