--- a/index.html
+++ b/index.html
@@ -211,10 +211,13 @@
     <div id="skills">
         <ul>
 	    <li>ARM</li>
-            <li>JavaScript</li>
             <li>Python</li>
             <li>C</li>
             <li>C++</li>
+            <li>HTML</li>
+            <li>PHP</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
 	    <li>JMP</li>
 	    <li>Wordpress</li>
 	    <li>Microsoft Office</li>
