--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     	</div>
     <!-- End #about -->	   
     <div id="skills">
+	<h4 class="resume-skills-cat font-weight-bold">Others</h4>
         <ul>
 	    <li>ARM</li>
             <li>Python</li>
