--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
     <!-- End #skills -->
 
-    <!-- EXPERIENCE SECTION ########################################################################################################### -->	
+    <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
@@ -283,6 +283,62 @@
     </div>
     <!-- End #experience -->
 
+
+    <!-- OTHER EXPERIENCE SECTION ########################################################################################################### -->	
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="September 2018 - May 2019">
+                <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
+                <h4>Graduate Assistant</h4>
+                <ul>
+			<li> Graded assignments and lab reports, and tabulate grades accordingly.</li>
+			<li> Assisted in lab, answering questions related to homework assignments and laboratory experiments.</li>
+                </ul>
+            </div>
+	    
+	    <div data-date="January 2019 - May 2019">
+                <h3>College of Engineering & Computer Science (CECS) Mentorship Program </h3>
+                <h4>Student Coordinator</h4>
+                <ul>
+                	<li> Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.</li>
+			<li> Structured and piloted the program to improve students learning outcomes within the program.</li>
+			<li> Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.</li>
+	    </ul>
+            </div>
+		
+            <div data-date="January 2017 - May 2019">
+                <h3>CSUN Mentorship Program</h3>
+                <h4>Peer Mentor</h4>
+                <ul>
+                	<li> Impacted assigned mentees positively by serving as a social and academic role model.</li>
+			<li> Helped set goals and offer support through referral of resources available on campus.</li>
+			<li> Fostered a supportive environment with constructive feedback on performance.</li>
+                </ul>
+            </div>
+		
+	    <div data-date="June 2018 - August 2018">
+                <h3>Intel Corporation - Intel (iCDG) </h3>
+                <h4>Graduate Intern</h4>
+                <ul>
+                	<li> Designed and developed C# application that integrates JMP for product’s test data analysis.</li>
+			<li> Implemented Machine Learning for pattern detection in test data.</li>
+		</ul>
+            </div>
+  		
+	    <div data-date="November 2014 - July 2015">
+                <h3>North Seattle College, International Programs </h3>
+                <h4>Graduate Intern</h4>
+                <ul>
+                	<li> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+			<li> Liaised with the marketing department to visualize and design marketing materials.</li>
+			<li> Created and photographed college's community events based on the marketing needs.</li>
+		</ul>
+            </div>          
+        </div>
+    </div>
+    <!-- End #experience -->
+	
     <!-- PROJECTS SECTION ########################################################################################################### -->	
     <div id="projects">
         <h2 class="heading">Projects</h2>
