--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <!-- End #skills -->
 
     <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
-<!--    <div id="experience" class="background-alt">
+    <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2018 - May 2019">
