--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
     <!-- End #projects -->
 	
 <!-- OTHER EXPERIENCE SECTION ########################################################################################################### -->	
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
+    <div id="experience2" class="background-alt">
+        <h2 class="heading">Experience2</h2>
+        <div id="experience2-timeline">
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
@@ -380,7 +380,7 @@
             </div>          
         </div>
     </div>
-    <!-- End #experience -->
+    <!-- End #experience2 -->
 	
     <!-- CONTACT SECTION ############################################################################################################# -->	
     <div id="contact">
