--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
     <!-- End #experience --> 
 	
     <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
-    <div id="experience222" class="background-alt">
-        <h2 class="heading">Experience</h2>
+    <div id="experience">
+        <h2 class="heading">Experience222</h2>
         <div id="experience-timeline">
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
