--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 	    <li>Adobe Lightroom</li>
         </ul>
     </div>
+	</div>
     <!-- End #skills -->
 
     <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
