--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
     <!-- End #experience --> 
 	
     <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
-    <div id="experience2">
+    <div id="experience">
         <h2 class="heading">Experience222</h2>
-        <div id="experience2-timeline">
+        <div id="experience-timeline">
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
