--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
     <!-- End #skills -->
 
     <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
-    <div id="experience22" class="background-alt">
-        <h2 class="heading">Experience2</h2>
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience22</h2>
         <div id="experience2-timeline">
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
