--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
 	</div>
     <!-- End #skills -->
 
-    <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
+    <!-- ENGINEERING EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience22</h2>
+        <h2 class="heading">Engineering Experience</h2>
         <div id="experience2-timeline">
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
@@ -284,9 +284,9 @@
     <!-- End #experience --> 	
 	
 	
-    <!-- PROFESSIONAL EXPERIENCE SECTION ########################################################################################################### -->	
+    <!-- OTHER EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Other Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
