--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	
     <!-- OTHER EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
-        <h2 class="heading">Other Experience</h2>
+        <h2 class="heading">Leadership & Involvement</h2>
         <div id="experience2-timeline">
           
 	    <div data-date="January 2019 - May 2019">
@@ -269,6 +269,27 @@
 			<li> Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.</li>
 	    </ul>
             </div>
+
+	    <div data-date="November 2017 - May 2019">
+                <h3>Leaders in Engineering and Computer Science - Student Engineers' Council </h3>
+                <h4>President</h4>
+                <ul>
+			<li> Developed a unified, comprehensive representation of students in the college.</li>
+			<li> Served in Student Advisory Board and assist the college in ABET accreditation.</li>
+			<li> Coordinated Engineering Week and similar event series inclusive to all students.</li>
+		</ul>
+            </div> 
+		
+	    <div data-date="May 2017 - May 2019">
+                <h3>Tau Beta Pi, Engineering Honor Society </h3>
+                <h4>President</h4>
+                <ul>
+			<li> Re-chartered the chapter in the college, initiated over 140 members into the organization.</li>
+			<li> Coordinated officers, maintained chapter operations and defended constitution.</li>
+			<li> Maintained industrial connection, coordinate recruiting session/workshops on campus.</li>
+			<li> Awarded “Effective Use of Technology Award” in recruiting and promoting the organization.</li>
+		</ul>
+            </div> 
 		
             <div data-date="January 2017 - May 2019">
                 <h3>CSUN Mentorship Program</h3>
@@ -280,14 +301,79 @@
                 </ul>
             </div>
 		
+	    <div data-date="May 2016 - May 2019">
+                <h3>New Student Orientation (NSO) </h3>
+                <h4>Matador Mentor</h4>
+                <ul>
+			<li> Mentored incoming orientation leaders and provide support to the NSO Leadership.</li>
+			<li> Welcomed and acclimated new students to the university environment and culture.</li>
+		</ul>
+            </div> 
+
+	    <div data-date="September 2015 - April 2019">
+                <h3>Unified We Serve </h3>
+                <h4>Volunteer</h4>
+                <ul>
+			<li> Volunteered in various activities on and off campus as a whole.</li>
+			<li> Promoted community engagements and awareness.</li>
+		</ul>
+            </div> 		
+
+	    <div data-date="2017, 2018">
+                <h3>Tau Beta Pi National Convention </h3>
+                <h4>Chair of Financial Affairs Committee </h4>
+                <ul>
+			<li> Reviewed the auditor’s and Executive Director’s reports.</li>
+			<li> Reviewed the chapter accounts receivable to TBP Headquarters.</li>
+			<li> Determined and made motions pertinent to the association’s spending budget.</li>
+		</ul>
+            </div> 
+		
+	    <div data-date="May 2016 - May 2017">
+                <h3>Tau Beta Pi Engineering Honor Society </h3>
+                <h4>Vice President </h4>
+                <ul>
+			<li> Assisted President of the chapter in all legal duties of the chapter.</li>
+			<li> Maintained communication and coordinated officers for chapter’s activities.</li>
+	        </ul>
+            </div> 
+		
+	    <div data-date="January 2016 - May 2016">
+                <h3>Tau Beta Pi Engineering Honor Society </h3>
+                <h4>Webmaster</h4>
+                <ul>
+			<li> Developed and designed a new website for chapter’s event postings and updates.</li>
+			<li> Maintained and updated the website to enhance members experience.</li>
+	        </ul>
+            </div> 
+
+	    <div data-date="August 2015 - July 2016">
+                <h3>CSUN Cross-Cultural Friendship Club </h3>
+                <h4>Treasurer</h4>
+                <ul>
+			<li> Handled all financial affairs, preparation of financial report and record keeping.</li>
+			<li> Prepared and defended annual budget application for organization’s activities.</li>
+	        </ul>
+            </div>  
+		
 	    <div data-date="November 2014 - July 2015">
                 <h3>North Seattle College, International Programs </h3>
-                <h4>Graduate Intern</h4>
+                <h4>Marketing Photographer</h4>
                 <ul>
 			<li> Liaised with the marketing department to visualize and design marketing materials.</li>
 			<li> Created and photographed college's community events based on the marketing needs.</li>
 		</ul>
-            </div>          
+            </div>   
+
+	    <div data-date="September 2014 - May  2015">
+                <h3>North Seattle College I-Care Program </h3>
+                <h4>Volunteer</h4>
+                <ul>
+			<li> Volunteered in community kitchen to prepare meals to local emergency shelters.</li>
+			<li> Packed and transported meals to shelters and facilities, and served the needy.</li>
+	        </ul>
+            </div>
+		
         </div>
     </div>
     <!-- End #experience --> 
