--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">January 2018 - May 2019</span>
             <h4>Master of Science in Computer Engineering</h4>
-		<span> <i class="education-date">3.95/4.00</i></span>
+		<span class="education-date">3.95/4.00-</span>
             <ul>
                 <li> Distinction Award.</li>
 	    	<li> Outstanding Graduate Award.</li>
@@ -243,7 +243,7 @@
             </div>
 	    
 	    <div data-date="June 2018 - August 2018">
-                <h3>Intel Corporation - Intel (iCDG) </h3>
+                <h3>Intel Corporation - iCDG </h3>
                 <h4>Graduate Intern</h4>
                 <ul>
                 	<li> Designed and developed C# application that integrates JMP for product’s test data analysis.</li>
